foundation_cms/static/scss/components/home_page/kinetic_type_brand_line.scss
.kinetic-type-brand-line {
  $line-height: get-text-property($header-styles, "h3", "line-height", "small");

  --line-height-multiplier: #{$line-height};

  $animation-duration-in-ms: 600;

  --animation-duration-in-ms: #{$animation-duration-in-ms};

  line-height: $line-height;
  margin-bottom: 0;

  &__heading {
    margin-top: 0;
    margin-bottom: 2rem;
  }

  &__full-text {
    display: flex;
    flex-direction: column;

    @include mofo-text-style($header-styles, "h3", $header-font-family);
  }

  &__phrase-wrapper {
    display: inline-block;
    overflow: hidden;
    height: calc(1em * var(--line-height-multiplier));
    vertical-align: bottom;
  }

  &__phrase-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    transition: transform var(--animation-duration-in-ms) ms ease-in-out;
    will-change: transform;
  }

  &__phrase {
    height: calc(1em * var(--line-height-multiplier));
    line-height: calc(1em * var(--line-height-multiplier));
  }

  @media (prefers-reduced-motion: reduce) {
    &__phrase-list {
      transition: none !important;
      transform: none !important;
    }
  }

  @include breakpoint(400px up) {
    &__full-text {
      align-items: center;
      flex-direction: row;
      gap: 0.5rem;
    }
  }
}

